syntax = "proto3";
option java_package = "com.proto.prime";
option java_multiple_files = true;

service BeerService {
  rpc CreateBeerDecomposition(CreateBeerRequest) returns (CreateBeerResponse) {};
  rpc QueryBeerByIdDecomposition(QueryBeerByIdRequest) returns (stream QueryBeerByIdResponse) {};
  rpc EditBeerDecomposition(EditBeerRequest) returns (EditBeerResponse) {};
  rpc DeleteBeerDecomposition(DeleteBeerRequest) returns (DeleteBeerResponse) {};
}

message CreateBeerRequest {

}

message CreateBeerResponse {

}

message QueryBeerByIdRequest {

}

message QueryBeerByIdResponse {

}

message EditBeerRequest {

}

message EditBeerResponse {

}

message DeleteBeerRequest {

}

message DeleteBeerResponse {

}
